Change session to single variable

--- a/templates/santa/application/message_slack.html.twig
+++ b/templates/santa/application/message_slack.html.twig
@@ -7,12 +7,12 @@
 
 {% block options %}
     <div class="user-field message-step">
-        <h3><label for="{{ form.scheduled_at_tz.vars.id }}">Want to schedule the message to a later date?</label></h3>
+        <h3><label for="{{ form.options.scheduled_at_tz.vars.id }}">Want to schedule the message to a later date?</label></h3>
 
         <p>If not, you can just leave this field <strong>empty</strong>.</p>
 
-        {{ form_widget(form.scheduled_at_tz) }}
-        {{ form_widget(form.scheduled_at, {attr: {style: 'display: none;'}}) }}
+        {{ form_widget(form.options.scheduled_at_tz) }}
+        {{ form_widget(form.options.scheduled_at, {attr: {style: 'display: none;'}}) }}
 
     </div>
 {% endblock %}
@@ -20,10 +20,10 @@
 
 {% block message_js %}
     <script  nonce="{{ csp_nonce('script') }}">
-        let displayedDate = document.querySelector('#{{ form.scheduled_at_tz.vars.id }}');
+        let displayedDate = document.querySelector('#{{ form.options.scheduled_at_tz.vars.id }}');
         if (displayedDate) {
             displayedDate.addEventListener('change', function () {
-                document.querySelector('#{{ form.scheduled_at.vars.id }}').value = Math.ceil(new Date(displayedDate.value).getTime() / 1000)
+                document.querySelector('#{{ form.options.scheduled_at.vars.id }}').value = Math.ceil(new Date(displayedDate.value).getTime() / 1000)
             })
         }
     </script>
